--- a/meu-Site-main/meu-Site-main/Site-1--main/sai 1/index.html
+++ b/meu-Site-main/meu-Site-main/Site-1--main/sai 1/index.html
@@ -10,19 +10,21 @@
     <nav> 
         <ul>
             <li>
-                <a href="index.html">história</a>
+                <a>
+                    história
+                </a>
             </li>
             <li>
-                <a href="cleber.html">cleber</a>
+                <a>
+                   cleber
+                </a>
             </li>
             <li>
-                <a href="historia.html">história</a>
+                <a>
+                    história
+                </a>
             </li>
         </ul>
     </nav>
-
-    <header>
-        <img src="./img/Imagem1.jpg"></img>
-    </header>
 </body>
 </html>
