--- a/Site-1--main/sai 1/index.html
+++ b/Site-1--main/sai 1/index.html
@@ -7,24 +7,96 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <nav> 
+    <div class="container">
+<nav> 
         <ul>
             <li>
-                <a>
-                    história
-                </a>
+                <a href="index.html">Sobre ele</a>
             </li>
             <li>
-                <a>
-                   cleber
-                </a>
+                <a href="cleber.html">Curiosidades</a>
             </li>
             <li>
-                <a>
-                    história
-                </a>
+                <a href="historia.html">Feitos Historicos</a>
             </li>
         </ul>
     </nav>
+
+    <header>
+        <div class="center">
+            <img src="./img/Imagem1.jpg"></img>
+        </div>
+        <h1>Cristiano Ronaldo dos Santos Aveiro</h1>
+        <h2>Jogador de Futebol</h2>
+    </header>
+
+    <main>
+        <section>
+            <h3>
+            Resumo sobre ele
+            </h3>
+        <p>
+            Cristiano Ronaldo é um dos maiores jogadores de futebol de todos os tempos. Começou sua carreira no Sporting CP e se destacou no Manchester United, onde ganhou sua primeira Ballon d'Or. Depois foi para o Real Madrid, onde conquistou vários títulos, incluindo 4 Champions League. Jogou pela Juventus, retornou ao Manchester United e, em 2023, se transferiu para o Al Nassr, na Arábia Saudita. Pela seleção de Portugal, venceu a Eurocopa de 2016 e a Liga das Nações de 2019
+        </p>
+        </section>
+         <section>
+            <h3>
+            Clubes
+            </h3>
+        <p>
+         Sporting CP (2002-2003)
+        </p>
+        <p>
+         Manchester united (2003-2009)
+        </p>
+        <p> 
+        Real Madrid(2009-2018)
+        </p>
+        <p>
+        Juventus(2018-2021)
+        </p>
+        <p>
+        Manchester United(2021-2022)
+        </p>
+        <P>
+        Al-Nassr(2023-Presente)
+        </p>
+        </section>
+        <section>
+            <h3>
+            Premios individuais
+            </h3>
+        <p>
+ Ballon d'Or (Melhor Jogador do Mundo) – 5 vezes (2008, 2013, 2014, 2016, 2017)
+</p>
+<p>
+Chuteira de Ouro (Golden Shoe) – 4 vezes (2008, 2014, 2015, 2018)
+</p>
+<P>
+Melhor Jogador da UEFA (UEFA Player of the Year) – 3 vezes (2008, 2014, 2016)
+</p>
+<p>
+FIFA The Best (Melhor Jogador do Mundo pela FIFA) – 2 vezes (2016, 2017)
+</p>
+<p>
+Prêmio Puskás (Gol mais bonito do ano) – 1 vez (2009)
+<P>
+Artilheiro da UEFA Champions League – 7 vezes
+</P>
+<p>
+Jogador do Ano pela Premier League – 2 vezes (2007, 2008)
+</p>
+<p>
+Jogador do Ano da La Liga – 2 vezes (2013, 2014)
+</p>
+<p>
+Melhor Jogador da UEFA Europa League – 1 vez (2004)
+</p>
+<p>
+Artilheiro da Seleção Portuguesa
+</p>
+        </section>
+    </main>
+    </div>
 </body>
 </html>
